@@ -1,5 +1,10 @@
 2005-06-02  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-extracting.c:
+	Fiddle the path santization a little.
+
+2005-06-02  Ross Burton  <ross@burtonini.com>
+
 	* configure.in:
 	Depend on MusicBrainz 2.1.0 for the Date queries.
 
